--- a/build.gradle
+++ b/build.gradle
@@ -11,18 +11,25 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+        classpath 'com.google.gms:google-services:4.3.15'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+
+
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()  // Maven Central repository
     }
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
