--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.5.0'
+    implementation files('libs\\activation.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -53,5 +54,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     // Gson
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+
 }
 
