--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     // Gson
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+' // crop
 
 }
 
