--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()  // Maven Central repository
+        maven { url 'https://jitpack.io' } // 이 부분 추가
     }
 }
 
