--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,16 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'com.github.yalantis:ucrop:2.2.6'
-
+    // volley
+    implementation 'com.android.volley:volley:1.2.1'
+    // glide : 이미지 서버에서 가져오기
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.4'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    // gson 변환기 라이브러리(json타입의 응답결과를 객체로 매핑(변환)해주는 Converter)
+    implementation 'com.squareup.retrofit2:converter-scalars:2.6.4'
+    // Scalars 변환기 라이브러리 : 응답결과를 String자체로 받아서 보여준느 Converter
 
 }
 
