--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,11 +61,18 @@ dependencies {
     // glide : 이미지 서버에서 가져오기
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.6.4'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // gson 변환기 라이브러리(json타입의 응답결과를 객체로 매핑(변환)해주는 Converter)
     implementation 'com.squareup.retrofit2:converter-scalars:2.6.4'
-    // Scalars 변환기 라이브러리 : 응답결과를 String자체로 받아서 보여준느 Converter
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+
+
+
 
 }
 
