로그인_로그인 체크하고, db에 간편 값 저장 / 구글로그인 셋팅 조금

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-kapt' // kapt를 사용하기 위해
 
 android {
     compileSdkVersion 33
@@ -69,6 +70,10 @@ dependencies {
 
 
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+    // room 라이브러리
+    implementation 'androidx.room:room-runtime:2.5.1'
+    kapt 'androidx.room:room-compiler:2.5.1'
 
 
 
