--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activity_Find_Pw"
+            android:exported="false" />
+        <activity
+            android:name=".Activity_Set_nickname"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Main2"
             android:exported="false" />
         <activity
