--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0' // 동그라미 이미지
+
 
 
 
