설정 액티비티 생성 및 뷰구성, 설정 액티비티 뷰바인딩, 마이페이지 프래그먼트 바인딩, 마이페이지 프래그먼트에서 설정 액티비티로 이동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activity_Setting"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Change_Pw"
             android:exported="false" />
         <activity
