--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activity_Book_Search"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Setting"
             android:exported="false" />
         <activity
