검색한 도서 저장_저장된 도서인지 확인, 팝업 뜨게 하기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activity_PopUp_in_Search_Book"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/popupTheme"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Book_URL"
             android:exported="false" />
         <activity
