직접도서저장_액티비티, 뷰셋팅, SPINNER, 갤러리에서 이미지 가져오기, 이미지 삭제하기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,10 +40,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activity_PopUp_in_Search_Book"
-            android:screenOrientation="fullSensor"
-            android:theme="@style/popupTheme"
+            android:name=".Activity_Book_Add"
             android:exported="false" />
+        <activity
+            android:name=".Activity_PopUp_in_Search_Book"
+            android:exported="false"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/popupTheme" />
         <activity
             android:name=".Activity_Book_URL"
             android:exported="false" />
