등록된 도서 자세히보기_리뷰작성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activity_Review_Write"
+            android:exported="false" />
+        <activity
             android:name=".ActivityDetailMyBook"
             android:exported="false" />
         <activity
