--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activity_Add_Memo"
+            android:exported="false" />
+        <activity
+            android:name=".Activity_Book_Memos"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Review_Write"
             android:exported="false" />
         <activity
