--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,7 +101,7 @@
         </activity> <!-- 카메라 동작시 필요한 provider -->
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.books_ko"
+            android:authorities="com.example.books_ko.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
