--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0' // 동그라미 이미지
 
+    // 이미지 슬라이드
+    //implementation 'com.github.smarteist:autoimageslider:1.4.0'
 
 
 
