메모리스트 - 슬라이드 라이브러리, 데이터/뷰/어댑터 생성, 어댑터 기본적인 셋팅정도

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         google()
         mavenCentral()  // Maven Central repository
         maven { url 'https://jitpack.io' } // 이 부분 추가
+        jcenter()
     }
 }
 
