메모댓글_액티비티, 데이터, 뷰, 어댑터 생성 초기 설정 / 댓글추가ing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activity_Add_Comment"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Change_Profile"
             android:exported="false" />
         <activity
