채팅_소켓연결, 텍스트 메세지 ing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activity_Chatting"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Edit_Memo"
             android:exported="false" />
         <activity
